--- a/NYOB-dw-data-cleaning-and-formatting.ipynb
+++ b/NYOB-dw-data-cleaning-and-formatting.ipynb
@@ -401,6 +401,7 @@
    "outputs": [],
    "source": [
     "#removing the slash using split('/')\n",
+    "no_slash_list=[]\n",
     "for item in df['number_of_open_complaints']: \n",
     "    no_slash_list.append(item.split('/')[1]) #(index1) keeps middle number \n",
     "# have created a new list\n",
